frontend/tiny_camiot/test/bad/badtest13.cam


data Test a where
  Test : (a, Int) -> Test a

good : Test Int -> Int
good (Test (a, b)) = a + b

bad : Test Int -> Int
bad (Test (a,b,c)) = a+b
